Regression: Toggle System Console create new process in taskbar #108356

Closed
opened 2023-05-27 19:17:49 +02:00 by DShot92 · 5 comments
Contributor

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.61

Blender Version
Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-05-25, 03:56:47, hash: 23862ec60e38
Worked: version: 4.0.0 Alpha, branch: main, commit date: 2023-05-24 06:34, hash: b621c6ba072a
Caused by 9cf77efaa0

Short description of error
Blender launch with console icon, and opening the console create a new blender icon alltogether.
When launching the console it used to appean a new task behind the blender icon.

A video of the different behaviours (Left build of May 24,th right build of the 25th)
Video Example

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.61 **Blender Version** Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-05-25, 03:56:47, hash: `23862ec60e38` Worked: version: 4.0.0 Alpha, branch: main, commit date: 2023-05-24 06:34, hash: `b621c6ba072a` Caused by 9cf77efaa06823d2403120701f5c591d5b151d59 **Short description of error** Blender launch with console icon, and opening the console create a new blender icon alltogether. When launching the console it used to appean a new task behind the blender icon. A video of the different behaviours (Left build of May 24,th right build of the 25th) [Video Example](https://i.imgur.com/qLmhhWx.mp4)
DShot92 added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-05-27 19:17:49 +02:00
Iliya Katushenock changed title from Windows 10 Taskbar Console create own icon to Regression: Toggle System Console create new process in taskbar 2023-05-27 19:26:33 +02:00

Now Toggle System Console create new process in taskbar for me, i can confirm this.
Not sure about missing icon, i can not reproduce this.
This changes look like regression and it possible to have some other bugs, like missing icons.
Not sure in this is windows 10 only.

Now `Toggle System Console` create new process in taskbar for me, i can confirm this. Not sure about missing icon, i can not reproduce this. This changes look like regression and it possible to have some other bugs, like missing icons. Not sure in this is windows 10 only.
Iliya Katushenock added
Status
Needs Info from Developers
and removed
Status
Confirmed
labels 2023-05-27 19:31:19 +02:00
Author
Contributor

On linux i usually launch blender from the terminal.
But now that i think about it, it does not have the Toggle System Console button.

On linux i usually launch blender from the terminal. But now that i think about it, it does not have the Toggle System Console button.
Member

I can confirm the second icon on the tasktray. Note this isn't really a new process but just that Windows is not seeing them related in such a way that causes them to be grouped together like before.

This is probably solvable but we can't really look into this much until Monday. This will be related to #107013, most probably the changes in GHOST_WindowWin32.cc. Indeed if registerWindowAppUserModelProperties and unregisterWindowAppUserModelProperties are not run they group as before. Actually just not setting PropertyStore PKEY_AppUserModel_ID is enough to make them group.

As for the console icon though, I do not see that in the last nightly build, whether launching from "blender.exe" or "blender-launcher.exe". They both have the expected Blender logos.

I can confirm the second icon on the tasktray. Note this isn't really a new process but just that Windows is not seeing them related in such a way that causes them to be grouped together like before. This is _probably_ solvable but we can't really look into this much until Monday. This will be related to #107013, most probably the changes in GHOST_WindowWin32.cc. Indeed if registerWindowAppUserModelProperties and unregisterWindowAppUserModelProperties are not run they group as before. Actually just not setting PropertyStore PKEY_AppUserModel_ID is enough to make them group. As for the console icon though, I do not see that in the last nightly build, whether launching from "blender.exe" or "blender-launcher.exe". They both have the expected Blender logos.
Harley Acheson self-assigned this 2023-05-27 21:24:26 +02:00
Harley Acheson added
Status
Confirmed
and removed
Status
Needs Info from Developers
labels 2023-05-27 21:24:36 +02:00
Pratik Borhade added
Priority
High
and removed
Priority
Normal
labels 2023-05-29 08:13:34 +02:00
Member

Raising the priority since this is a recent regression.

Raising the priority since this is a recent regression.
Member

Caused by 9cf77efaa0

Caused by 9cf77efaa06823d2403120701f5c591d5b151d59
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-05-29 23:19:20 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#108356
No description provided.